# erland

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rebar.config
.github/.workflows/: cargo.yaml
.github/workflows/: cargo.yaml  container.yaml
include/: README.txt
include/elixir/: init.sh  testing.exs
include/erlang/: init.sh  rebar.config  run.sh  testing.app.src  testing.erl
include/gleam/: gleam.toml  init.sh
src/: erland.app.src  erland.hrl  erland_app.erl  erland_cmd.erl  erland_erl_mgr.erl  erland_ex_mgr.erl  erland_mgr.erl  erland_request.erl  erland_sup.erl  erland_websocket.erl  macros.rs  main.rs  messaging.rs  result.rs  stream.rs
src/handler/: elixir.rs  erlang.rs  gleam.rs  mod.rs
src/manager/: erlang.rs  mod.rs
src/server/: http.rs  mod.rs  websocket.rs
