[package]
name = "erland"
version = "1.0.0-alpha"
edition = "2021"
license = "AGPL-3.0"
description = "Self-hosted playground server for BEAM languages"
homepage = "https://github.com/erland-beam/erland"
repository = "https://github.com/erland-beam/erland"
keywords = ["web-server", "websocket", "erlang", "elixir", "playground"]
authors = ["meppu <crates@meppu.boo>"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE.md"]

[dependencies]
axum = { version = "0.6", features = ["ws"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
